GP1-1430 Fix email column values from overflowing to the adjacent column

--- a/gobii-web/src/main/webapp/css/extractor-ui.css
+++ b/gobii-web/src/main/webapp/css/extractor-ui.css
@@ -98,3 +98,6 @@ button:disabled {
     white-space: nowrap;
 }
 
+div.ui-datatable-scrollable-body {
+    overflow-y: scroll;
+}
